syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option go_package = "github.com/Genvekt/cli-chat/libraries/api/chat/v1;chat_v1";

service ChatV1{
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc ConnectChat (ConnectChatRequest) returns (stream Message);
}

message Chat {
  int64 id = 1;
  ChatInfo info = 2;
  repeated ChatMember members = 3;
  google.protobuf.Timestamp created_at = 4;
}

message ChatInfo {
  string name = 1;
}

message ChatMember {
  int64 id = 1;
  google.protobuf.Timestamp joined_at = 2;
}

message CreateRequest {
  repeated string usernames = 1;
  string name = 2;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message Message {
  int64 sender_id = 1;
  int64 chat_id = 2;
  string text = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message SendMessageRequest {
  Message message = 4;
}

message ConnectChatRequest {
  int64 chat_id = 1;
  string username = 2;
}